search icon overlap issue with customizer reverted

--- a/framework/assets/admin/css/customizer-togle-buttons.css
+++ b/framework/assets/admin/css/customizer-togle-buttons.css
@@ -18,10 +18,6 @@
   margin: 15px 0;
 }
 
-.flexia-primary-menu .customize-partial-edit-shortcut button {
-  margin-left: 50px;
-}
-
 input[type=checkbox].tgl {
   display: none;
 }
